--- a/vistas/image.html
+++ b/vistas/image.html
@@ -7,30 +7,25 @@
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
 	<link rel="icon" href="img/icon.png" type="image/x-icon">
 	<title> Image Segmentation </title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-  	<script src="js/jquery.min.js"></script>
-  	<script src="js/script.js"></script>
 </head>
-<body>
-	<div id="Cargando" >
-          <div id="Preloader">
-          	<h3>Cargando...</h3>
-          </div>   
-    </div>
-	<div class="container">
-		<div id="title"><h1> Image Segmentation </h1></div>
-        <div class="Form" style="width: 42%;">
-            <div id="contentImg">
+<body style="width: 100%;
+    height: 100%;
+    font-family: 'Pavanam', sans-serif;
+    overflow-x: hidden;
+    background-color: #486897;">
+	<div style="width: 100%;height: 100%;position: absolute;">
+        <div style="width: 42%;margin: 0 auto;color: white;">
+            <div style="width: 288px; margin: 0 auto;">
                 <p style="overflow: hidden;">
-                    <img id="img" src={{img}} />
+                    <img id="img" src={{img}} 
+                    style=" margin-top: -21px;
+                            margin-right: -346px;
+                            margin-left: -302px;
+                            margin-bottom: -1268px;
+                            background: white;" />
                 </p>
             </div>
-            <div id="contentImgOri">
-               <img id="imgOriginal" style="width: 288px;margin-top: 12px;" src="http://24.media.tumblr.com/tumblr_lfp3qax6Lm1qfmtrbo1_1280.jpg" /> 
-            </div>
         </div>
-        <div id="error"></div>
 	</div>
 
 </body>
